--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Cheng0315/npm-lab-online-web-sp-000#readme",
   "dependencies": {
-    "learn-browser": "^0.1.24"
+    "learn-browser": "^0.1.24",
+    "moment": "^2.24.0"
   }
 }
